# noroshi

./: .gitignore  .gitmodules  FIRMWARE.md  README.md  UI.md  adc.c  microphone.c  thoughts.md  users.h  views.c
esp32/: README.md  THINK.md  fileinfo.c  friends.h  fs.c  main.c  now.c  sock.c  sync-old.c  sync.c  tags  wifi.c
esp32/include/: ftw.h  ht.h  wifi.h
esp32/src/: friend.c  main.c  now.c  old-sync-stuff.c  sd.c  sync.c  uart.c  wifi.c
firmware/: CMakeLists.txt
firmware/src/: main.c  my_modem.c  types.h
firmware/src/event/: app_event.h  event_manager.h  hw_event.h  i2s_event.h  radio_event.h  server_event.h  ui_input_event.h
firmware/src/hw/: i2s.c  mic.c
firmware/src/lwm2m/: user.c  voice.c
firmware/src/module/: CMakeLists.txt  common.h  modem.c  mqtt.c  my_modem.c  radio.c  ui.c
firmware/src/ui/: random_view_stuff.c  ui_input.c  views.c
nrf9160/: tags
nrf9160/src/: main.c  types.h
nrf9160/src/event/: CMakeLists.txt  app.h  audio_event.h  hw_event.h  modem_event.h  radio_event.h
nrf9160/src/hw/: CMakeLists.txt  audio.c  i2s-codec.c  old-codec.c  uart.c
nrf9160/src/hw/audio/: audio.c  codec-i2s.c  codec2.c  codec2_pdm_mic.c
nrf9160/src/module/: modem.c  motorola.c  mqtt.c  old-radio.c  radio.c  ui.c  users.c
nrf9160/src/ui/: CMakeLists.txt
pcb/: GBR-cache.lib  GBR.kicad_pcb  GBR.kicad_pcb-bak  GBR.net  GBR.pro  GBR.sch  GBR.sch-bak  UI.psd  fp-info-cache  sym-lib-table
